--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Install Requirements
         run: |
-          pip install -r Requirements
+          pip install -r requirements.txt
       
       - name: model train
         run: python train.py
