--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -7,10 +7,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@4
+        uses: actions/checkout@v4
 
       - name: setup python
-        uses: actions/setup-python@4
+        uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
