--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -22,7 +22,7 @@ jobs:
         run: python train.py 
 
       - name: Upload model artifacts
-        uses: actions/upload-artifacts@v4
+        uses: actions/upload-artifact@v4
         with:
           name: model-artifacts
           path: |
