--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -39,5 +39,5 @@ jobs:
       - name: Download trained model artifacts
         uses: actions/download-artifact@v4
         with:
-          name: model-artifact
+          name: model-artifacts
           path: .
