--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -48,4 +48,4 @@ jobs:
         run : docker images
 
       - name: Run container
-        run : docker run -d --name mlops-model-container -p 5000:5000 ml-model
+        run : docker run -d --name mlops-model-container -p 5000:5000 mlops-model
